k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: stockapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: flask-app
          image: alextododev/stock-backend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: stockapp
spec:
  selector:
    app: flask-app
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
